--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>repl.it</title>
-    <link href="reset.css" rel="stylesheet" type="text/css" />
     <link href="styles.css" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Bangers|Cabin+Sketch:400,700|Freckle+Face|Press+Start+2P" rel="stylesheet">
   </head>
@@ -52,13 +51,13 @@
      </div> 
     
      <div class="battle-btns"> 
-       <div class="rock"> 
+       <div class="rock attack" data-attack="rock"> 
          <img src="https://gamepedia.cursecdn.com/7daystodie_gamepedia/b/bb/RockSmall.png" width="100%"> 
          Rock 
-       </div><div class="paper"> 
+       </div><div class="paper attack" data-attack="peper"> 
          <img src="https://d2hjx23c0w4ndg.cloudfront.net/Resources/430/341430/1318828_additionalsmallwatermarked.png"> 
          Paper 
-       </div><div class="scissors"> 
+       </div><div class="scissors attack" data-attack="scissors"> 
          <img src="https://lh4.googleusercontent.com/proxy/ff_VFPsIQLScB5oej-PbZSNgsLaVRo56nWEaQ_B_baN2n1d3unH2TM9Q_EAm4FWshStf-rBHH5rUOor2vbPZ3vUc"> 
          Scissors 
        </div> 
